[package]
name = "dero-miner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.3", features = ["derive", "env", "unicode", "color", "suggestions"] }
num_cpus = "1.13.1"
log = "0.4"
fern = { version = "0.5", features = ["colored"] }
chrono = "0.4"
derohe = { version = "*", path = './libs/derohe' }
websocket = "0.26.3"
serde = "1.0.136"
serde_derive = "1.0.136"
serde_json = "1.0"
crossbeam = "0.8.1"
ctrlc = { version = "3.0", features = ["termination"] }
hex = "0.4.3"
num-bigint = "0.4.3"